# UltralightWeb_Cursor

./: .gitignore  CMakeLists.txt  LICENSE  PKGBUILD  README.md  build.sh
GUI/: CMakeLists.txt  Main.qml  SettingsBackend.cpp  SettingsBackend.hpp  UltralightWebCursorGUI_Desktop.in  kcm_ultralightwebcursor.json  main_settings.cpp
GUI/ui/: main.qml
WebCursor/: effect.js  index.html  style.css
src/: CMakeLists.txt  UltralightCursorEffect.cpp  main.cpp  metadata.json
src/lib/: CursorFX.cpp  CursorMain.cpp  KwinMouseProvider.cpp  MouseUpload.cpp  UltralightCursorEffect.cpp  UltralightEffect.cpp  UltralightHtmlEffect.cpp  UserConfig.cpp  WaylandBack.cpp  config.cpp  metadata.json
src/lib/BlackList/: BlacklistManager.cpp  BlacklistManager.hpp
src/lib/Quick/PluginPath/: PluginPath.cpp  PluginPath.hpp
src/lib/header/: CursorFX.hpp  GUIManger.hpp  GlobalConstas.hpp  KwinMouseProvider.hpp  MouseProvider.hpp  MouseUpload.hpp  UltralightCursorEffect.hpp  UltralightHtmlEffect.hpp  UserConfig.hpp  WaylandBack.hpp  WaylandBackend.hpp
testHtml/: index.html
